--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -2,7 +2,7 @@ name: markdownlint
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
   workflow_dispatch:
 
@@ -13,13 +13,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run markdownlint-cli2
+      - name: Run markdownlint-cli2 and fix
         uses: DavidAnson/markdownlint-cli2-action@v19
         with:
           globs: |
             **/*.md
-        env:
-          # ルール設定ファイルが無くてもデフォルトルールで実行
-          # 追加設定をしたい場合は .markdownlint.json をリポジトリ直下に配置
-          NODE_OPTIONS: "--no-deprecation"
+          fix: true
 
+      - name: Commit and Push fixes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "style: Fix Markdown linting errors"
+          file_pattern: "**/*.md"
